--- a/ccClub_hw1.ipynb
+++ b/ccClub_hw1.ipynb
@@ -211,7 +211,9 @@
     "- Didn't focused enough on the question, and didn't realize that the question is asking for\n",
     "\n",
     "## learning\n",
-    "- use `else` in `while` section so we can use `break` in loop"
+    "- use `else` in `while` section so we can use `break` in loop\n",
+    "- use the list and while loop to solve the uglynumber questions\n",
+    "- only can use `break` and `continue` in loop instead of if statement \n"
    ]
   }
  ],
