--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 0 \n",
-      "100\n"
+      "3 2 0\n",
+      "100.0\n"
      ]
     }
    ],
@@ -78,12 +78,49 @@
     "    return n_list, float(earn)\n",
     "\n",
     "n_list, earn = eat(food,stom)\n",
-    "s = ''\n",
-    "for i in n_list:\n",
-    "    s += str(i) + ' '\n",
+    "s = ' '.join(str(i) for i in n_list)\n",
     "print(s)\n",
-    "print(earn)\n",
-    "\n"
+    "print(earn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(s)"
    ]
   },
   {
@@ -140,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +193,8 @@
     "c = int(input())\n",
     "l = [int(i) for i in input().split()]\n",
     "def find(c,l):\n",
-    "    a = l[0]\n",
-    "    b = l[1]\n",
+    "    a = l[0] if l[0] < l[1] else l[1]\n",
+    "    b = l[1] if l[1] > l[0] else l[0]\n",
     "    for i in range(a,b+1):\n",
     "        for j in range(a,b+1):\n",
     "            if i**2 + j**2 == c**2:\n",
